* Factorize the cost price of move for cost computation
* Fill grouping values when assigning move
* Use a single assign wizard for all shipments
* Add access rules to product quantities by warehouse
* Add moves for product quantities by warehouse
* Enforce filling cost price of move
* Rename move state from cancel to cancelled
* Rename shipment states from cancel to cancelled
* Rename inventory state from cancel to cancelled
* Override warehouse with context value for current user

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add visual on product and location quantities
* Define one lost and found location per warehouse
* Show warehouse in user status if not unique
* Add cost price revision
* Add wizard to modify product cost price
* Add cron task to recompute product cost
* Update cost of moves when recomputing product cost

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Add today record in Product Quantities By Warehouse
* Allow consumable product on inventories
* Let the user select a default warehouse
* Add method to get default warehouse
* Improve moves synchronisation on shipments
* Allow move as move's origin
* Open product quantities by warehouse to show moves

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Don't set default unit price on stock move
* Prefer to pick product from the source location
* Change move attribute of ShipmentReport for a method
* Rename inventory count quantity_resulting to total_quantity

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Add count wizard on inventory
* Remove support for Python 2.7
* Prevent delete lines if inventory is not draft or canceled
* Manage same input and storage location in customer return shipment

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add _stock_move_split context keyword when copying move for split
* Manage same input and storage location in supplier shipment